Fix layoutshift, make header responsive

--- a/styles/overall.css
+++ b/styles/overall.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,700&display=swap"); */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 
 * {
 	box-sizing: border-box;
@@ -19,11 +21,10 @@ body {
 
 header {
 	border: 1px solid black;
-
 	background-color: blueviolet;
 	display: flex;
 	align-items: center;
-	padding: 5px 30px;
+	padding: 5px 100px;
 }
 
 a {
@@ -34,15 +35,30 @@ a {
 ul {
 	border: 1px solid black;
 
-	width: 35vw;
 	list-style-type: none;
 	display: flex;
 	justify-content: space-between;
 	margin-left: auto;
+	gap: 20px;
+	/* padding-right: 100px; */
+}
+
+ul li {
+	min-width: fit-content;
+	text-align: center;
 }
 
 header a {
+	/* display: block; */
 	border: 1px solid black;
+	min-width: 400px;
+
+	font-weight: 700;
+	font-size: 36px;
+}
+header h1 {
+	border: 1px solid black;
+	min-width: 200px;
 
 	font-weight: 700;
 	font-size: 36px;
